Added compiler args for cglib